Fix alignment on language switcher
Not sure if this changed (maybe since adding image dimensions transform?) or if I just misaligned it last time, but it's not correct on both desktop and mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -192,7 +192,7 @@
         flex-basis: 0px;
         position: absolute;
         top: var(--navbar_height);
-        right: 83px;
+        right: 85.5px;
         transform: scaleY(0.0002); /*Firefox bug with drawing behind other elements when scaling from 0*/
         z-index: 2;
         background-color: var(--navbar_color);
@@ -239,7 +239,7 @@
             padding-inline: 20px;
         }
         .language_switcher {
-            right: 88px;
+            right: 90.5px;
         }
     }
 }
